--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,10 @@
 ---
 title: "Parquet Basics"
 subtitle: ''
+date: "03 June 2025"
+date-format: DD-MM-YYYY
+date-modified: "`r Sys.Date()`"
+published-title: Created
 format:
   html:
     embed-resources: true
@@ -8,6 +12,7 @@ format:
     code-overflow: wrap
     theme: cosmo
     toc: true
+    toc-expand: 3
     canonical-url: true
 execute: 
   warning: false
@@ -15,50 +20,45 @@ execute:
   message: false
   echo: false
 # bibliography: references.bib
-lightbox: ## https://quarto.org/docs/output-formats/html-lightbox-figures.html
+lightbox: # https://quarto.org/docs/output-formats/html-lightbox-figures.html
   match: auto
   effect: fade
   desc-position: right
 dpi: 500
 ---
 
-## Welcome to the fantastic world of Parquet
+# Welcome to the fantastic world of Parquet
 
-### What is it?
+## What is it?
 
 Apache Parquet is an open source, column-oriented data file format designed for efficient data storage and retrieval. It provides high performance compression and encoding schemes to handle complex data in bulk and is supported in many programming language and analytics tools^[https://parquet.apache.org/docs/overview/].
 
-<!-- https://www.upsolver.com/blog/apache-parquet-why-use -->
+> The open-source project to build Apache Parquet began as a joint effort between Twitter[3] and Cloudera.[4] Parquet was designed as an improvement on the Trevni columnar storage format created by Doug Cutting, the creator of Hadoop. The first version, Apache Parquet 1.0, was released in July 2013. Since April 27, 2015, Apache Parquet has been a top-level Apache Software Foundation (ASF)-sponsored project.
 
-
-<!-- <!-- https://www.databricks.com/glossary/what-is-parquet --> -->
-
-<!-- ### What is Parquet? -->
-
-<!-- Apache Parquet is an open source, column-oriented data file format designed for efficient data storage and retrieval. It provides efficient data compression and encoding schemes with enhanced performance to handle complex data in bulk. Apache Parquet is designed to be a common interchange format for both batch and interactive workloads. It is similar to other columnar-storage file formats available in Hadoop, namely RCFile and ORC. -->
-
-
-#### Basic Definition
+## Why should we care?
 
 Apache Parquet is a file format designed to support fast data processing for complex data, with several notable characteristics:
 
-1. **Columnar:** Unlike row-based formats such as CSV or Avro, Apache Parquet is column-oriented – meaning the values of each table column are stored next to each other, rather than those of each record:
+1. **Columnar:** Unlike row-based formats such as CSV, Apache Parquet is column-oriented – meaning the values of each table column are stored next to each other, rather than those of each record:
 
 ![](https://www.upsolver.com/wp-content/uploads/2020/05/Screen-Shot-2020-05-26-at-17.52.58.png)
 
 The key difference between a CSV and Parquet file format is how each one is organized. A Parquet file format is structured by row, with every separate column independently accessible from the rest. Since the data in each column is expected to be of the same type, the parquet file format makes encoding, compressing and optimizing data storage possible.
 
-2. **Open-source:** Parquet is free to use and open source under the Apache Hadoop license, and is compatible with most Hadoop data processing frameworks. To quote the [project website](https://parquet.apache.org/){target="_blank"}, "Apache Parquet is… available to any project… regardless of the choice of data processing framework, data model, or programming language."
+2. **Open-source:** Parquet is free to use and open source under the Apache Hadoop license. 
+
+> Apache Parquet is a columnar storage format available to any project […], regardless of the choice of data processing framework, data model or programming language^[https://parquet.apache.org/].
+
 3. **Self-describing:** In addition to data, a Parquet file contains metadata including schema and structure. Each file stores both the data and the standards used for accessing each record – making it easier to decouple services that write, store, and read Parquet files.
 4. **Binary format:** Parquet file formats store data in binary format, which reduces the overhead of textual representation. It's important to note that Parquet files are not stored in plain text, thus cannot be opened in a text editor.
 
-#### Advantages of Parquet Columnar Storage – Why Should You Use It?
+## Advantages of Parquet Columnar Storage – Why Should You Use It?
 
 The above characteristics of the Apache Parquet file format create several distinct benefits when it comes to storing and analysing large volumes of data. 
 
 ::: {.panel-tabset}
 
-## Compression
+# Compression
 
 File compression is the act of taking a file and making it smaller. In Parquet, compression is performed column by column and it is built to support flexible compression options and extendable encoding schemas per data type – e.g., different encoding can be used for compressing integer and string data.
 
@@ -78,7 +78,7 @@ Parquet data can be compressed using these encoding methods:
 
 <!-- Embedded metadata helps in efficiently reading and processing the data. Any program that's used to read the data can also access the metadata to determine what type of data is expected to be found in a given column. -->
 
-## Performance
+# Performance
 
 As opposed to row-based file formats like CSV, Parquet is optimized for performance. When running queries on your Parquet-based file-system, you can focus only on the relevant data very quickly. Moreover, the amount of data scanned will be way smaller and will result in less I/O usage. To understand this, let's look a bit deeper into how Parquet files are structured.
 
@@ -106,7 +106,7 @@ This structure is well-optimized both for fast query performance, as well as low
 
 <!-- On the other hand, Parquet's columnar storage and efficient compression makes it well-suited for analytical queries that only need to access specific columns. This compression leads to faster query performance when dealing with large datasets. A  recent [survey by Green Shield Canada](https://posit.co/blog/speed-up-data-analytics-with-parquet-files/){target="_blank"} found that with the parquet file format, they were able to process and query data 1,500 times faster than with CSVs.  -->
 
-## Schema evolution
+# Schema evolution
 
 When using columnar file formats like Parquet, users can start with a simple schema, and gradually add more columns to the schema as needed. In this way, users may end up with multiple Parquet files with different but mutually compatible schemas. In these cases, Parquet supports automatic schema merging among these files.
 
@@ -118,7 +118,7 @@ When using columnar file formats like Parquet, users can start with a simple sch
 
 :::
 
-## Column-Oriented vs Row-Based Storage for Analytic Querying
+# Column-Oriented vs Row-Based Storage for Analytic Querying
 
 Data is often generated and more easily conceptualized in rows. We are used to thinking in terms of Excel spreadsheets, where we can see all the data relevant to a specific record in one neat and organized row. However, for large-scale analytical querying, columnar storage comes with significant advantages with regards to cost and performance.
 
@@ -129,15 +129,37 @@ Complex data such as logs and event streams would need to be represented as a ta
 
 Columnar formats provide better compression and improved performance out-of-the-box, and enable you to query data vertically – column by column. <!-- https://www.upsolver.com/blog/apache-parquet-why-use -->
 
-### Advantages of Storing Data in a Columnar Format:
+images columns row^[https://data-mozart.com/parquet-file-format-everything-you-need-to-know/]
+![](https://data-mozart.com/wp-content/uploads/2023/04/Row-store.png)
+![](https://data-mozart.com/wp-content/uploads/2023/04/Row-based-scan.png)
+![](https://data-mozart.com/wp-content/uploads/2023/04/Column-store.png)
 
-    Columnar storage like Apache Parquet is designed to bring efficiency compared to row-based files like CSV. When querying, columnar storage you can skip over the non-relevant data very quickly. As a result, aggregation queries are less time-consuming compared to row-oriented databases. This way of storage has translated into hardware savings and minimized latency for accessing data.
-    Apache Parquet is built from the ground up. Hence it is able to support advanced nested data structures. The layout of Parquet data files is optimized for queries that process large volumes of data, in the gigabyte range for each individual file.
-    Parquet is built to support flexible compression options and efficient encoding schemes. As the data type for each column is quite similar, the compression of each column is straightforward (which makes queries even faster). Data can be compressed by using one of the several codecs available; as a result, different data files can be compressed differently.
-    Apache Parquet works best with interactive and serverless technologies like AWS Athena, Amazon Redshift Spectrum, Google BigQuery and Google Dataproc.
-    
-<!-- https://coralogix.com/blog/parquet-file-format/ -->
+![](https://data-mozart.com/wp-content/uploads/2023/04/Row-groups.png)
 
+![](https://data-mozart.com/wp-content/uploads/2023/04/Scan-eliminate.png)
+Let’s quickly stop here, as I want you to realize the difference between various types of storage in terms of the work that needs to be performed by the engine:
+
+    Row store – the engine needs to scan all 5 columns and all 6 rows
+    Column store – the engine needs to scan 2 columns and all 6 rows
+    Column store with row groups – the engine needs to scan 2 columns and 4 rows
+
+
+
+# mao na massa
+
+## arrow
+
+https://arrow.apache.org/docs/r/
+
+### example from real life with ebird pts?
+
+## geoparquet - sfarrow
+
+### example from real life with rangemaps?
+
+## tidyverse - parquet
+
+https://www.tidyverse.org/blog/2025/01/nanoparquet-0-4-0/
 
 
 
